# ML-customer-conversion

./: .gitignore  Dockerfile  README.md  demo_row.json  feature_importance.ipynb  get_demo_row.py  main.py  model_xgb.pkl  notebook.ipynb  predict-demo.py  predict.py  pyproject.toml  train.py
